# dbtmgr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  go.mod  go.sum  main.go  makefile  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  security.yml
.github/workflows/: main.yml  pre-hooks.yml
cmd/: completion.go  root.go  version.go
cmd/lock/: lock.go  main.go
cmd/manifest/: main.go  manifest.go
internal/aws/: s3.go  session.go
internal/aws/lock/: s3.go  s3_test.go  type.go
internal/aws/manifest/: s3.go  type.go
internal/aws/utils/: cli.go  file.go  print_tree.go  session.go
internal/config/: color.go  color_test.go  config.go  config_test.go
internal/logging/: log.go  log_test.go
internal/subproc/: lock.go  state.go  subprocess.go
internal/utils/fs/: check_fs.go  check_fs_test.go  get_toplevel.go  get_toplevel_test.go
internal/utils/subproc/: lock.go  lock_test.go
internal/utils/types/: generics.go  manifest.go  types_lock.go
pkg/template/: template.go
scripts/: cli.py  create_version.py
test/: fixture.go  mock_s3.go
