[tool.poetry]
name = "statectl"
version = "0.3.0"
description = "state management and synchronization tool"
authors = ["benbenbang <bn@bitbrew.dev>"]
license = "Apache License, Version 2.0"
readme = "README.md"
packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
tomlkit = "^0.12.2"

[tool.poetry.scripts]
version_kit = "scripts.create_version:version_kit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
max-line-length = 120

[tool.pylint.format]
max-line-length = 120
